<resources>
    <string name="app_name">Manavata</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="dashboard">Provide Feedback</string>
    <string name="live">Live Coach</string>
    <string name="yoga">Yoga</string>
    <string name="helthy">Helthy Cooking</string>
    <string name="about">About Manavata</string>

</resources>