<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/blue_gredient"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/dashboard"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/row1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@+id/row2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/clothingCard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/blue_gredient">

                        <TextView
                            android:id="@+id/clothingName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="71dp"
                            android:text="@string/live"
                            android:textColor="@color/white"
                            android:textSize="20sp" />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/blue_gredient">

                        <TextView
                            android:id="@+id/elecName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="115dp"
                            android:text="@string/yoga"
                            android:textColor="@color/white"
                            android:textSize="20sp" />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/row1">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/blue_gredient">

                        <TextView
                            android:id="@+id/homeName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="18dp"
                            android:text="@string/helthy"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/blue_gredient">

                        <TextView
                            android:id="@+id/beautyName"
                            android:layout_width="112dp"
                            android:layout_height="75dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="46dp"
                            android:text="@string/about"
                            android:textColor="@color/white"
                            android:textSize="20sp" />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>